// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.update > functionality > update amount > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "745.4300",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "RON",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "currencyCode": "RON",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "currencyCode": "BOB",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "BOB",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "RON",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "BOB",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty doesn't auto-accept > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": null,
        "note": "esse necessitatibus voluptatem",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": null,
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
        "currencyCode": "ISK",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": null,
        "note": "esse necessitatibus voluptatem",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "esse necessitatibus voluptatem",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
        "currencyCode": "ISK",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "esse necessitatibus voluptatem",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "esse necessitatibus voluptatem",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-622.0400",
        "currencyCode": "ISK",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-745.4300",
        "currencyCode": "HNL",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "esse necessitatibus voluptatem",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "622.0400",
        "currencyCode": "ISK",
        "note": "dignissimos aliquam quam",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "cum soluta esse",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "architecto error dignissimos",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "cum soluta esse",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "architecto error dignissimos",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:c6921060-1137-45b4-b942-59630a98b84a|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:7a95f491-5b34-488a-b337-a6222e2af061|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;
